# mp4ameta

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  main.yml  style.yml
crates/mp4ameta_proc/: Cargo.toml
crates/mp4ameta_proc/src/: lib.rs
examples/: string_encoding.rs
files/: .gitignore  sample-chaptered.m4a  sample-multi-data.m4a  sample.m4a
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_read.rs
mp4ameta/: .gitignore  Cargo.toml
mp4ameta/src/: atom.rs  data.rs  error.rs  tag.rs
mp4ameta_proc/: Cargo.toml
mp4ameta_proc/src/: lib.rs
mp4meta/: .gitignore  Cargo.toml
mp4meta/src/: atom.rs  content.rs  data.rs  error.rs  lib.rs  tag.rs
proc/: Cargo.toml
proc/src/: lib.rs
src/: atom.rs  content.rs  data.rs  error.rs  lib.rs  tag.rs  test.rs  types.rs  util.rs
src/atom/: audio.rs  change.rs  chap.rs  chpl.rs  co64.rs  content.rs  data.rs  dinf.rs  dref.rs  ftyp.rs  gmhd.rs  gmin.rs  hdlr.rs  head.rs  ident.rs  ilst.rs  info.rs  mdat.rs  mdhd.rs  mdia.rs  meta.rs  metaitem.rs  minf.rs  mod.rs  moov.rs  mp4a.rs  mvhd.rs  state.rs  stbl.rs  stco.rs  stsc.rs  stsd.rs  stsz.rs  stts.rs  template.rs  text.rs  tkhd.rs  trak.rs  tref.rs  udta.rs  (+2 more)
src/core/: atom.rs  content.rs  data.rs  mod.rs  types.rs
src/core/atom/: audio.rs  ident.rs  mod.rs  template.rs
src/tag/: genre.rs  mod.rs  readonly.rs  tuple.rs
src/tag/userdata/: generate.toml  generated.rs  genre.rs  mod.rs  tuple.rs
test_files/: dump.REMOVED.git-id
tests/: handling.rs  io.rs  test.rs
tests/files/: sample.m4a
