[package]
name = "mp4ameta"
version = "0.11.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library for reading and writing iTunes style MPEG-4 audio metadata."
categories = ["multimedia::audio", "parser-implementations"]
keywords = ["mp4", "m4a", "audio", "metadata", "parser"]
repository = "https://github.com/Saecki/rust-mp4ameta"
edition = "2021"
include = ["src", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT"]

[dev-dependencies]
walkdir = "2.3.2"
